Commit includes: Initial Design, Framework Structure, Problems :)

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -1,12 +1,70 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-    <meta charset="utf-8" />
-    <title>Example App</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <script>window.base_url = '{{base_url}}'</script>
+    
+
+    <link rel="stylesheet" href="{{base_url}}css/normalize.min.css">
+    <link rel="stylesheet" href="{{base_url}}css/meeting.css">
+
+    <script src="{{base_url}}js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
+    <!--[if lt IE 7]>
+        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
 
-    {{{body}}}
+    <div class="meeting-container clearfix">
 
+    	{{{ body }}}
+
+    </div> <!-- #main-container -->
+
+    {{#if templates}}
+    <script src="{{base_url}}js/vendor/handlebars.runtime.js"></script>
+    <script>
+        (function () {
+            var template  = Handlebars.template,
+                templates = Handlebars.templates = Handlebars.templates || {};
+
+          {{#templates}}
+            templates['{{{name}}}'] = template({{{template}}});
+          {{/templates}}
+        }());
+    </script>
+    {{/if}}
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+
+    <script>
+        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+    
+    <!--
+    <div class="modal">
+        <h3>Need company? Just share this link:</h3>
+        <div class="modal-body">
+            <span id="share-link"><a href="#">http://bitmote.com/guest/ghjdofl</a></span>
+        </div>
+        <div class="modal-actions">
+            <a class="btn btn-small" href="#">Copy</a>
+            <a class="btn btn-small" href="#">Close</a>
+        </div>
+    </div>
+    <div class="modal-backdrop"></div>
+    -->
+    <script data-main="{{base_url}}js/main" src="{{base_url}}js/require-jquery.js"></script>
 </body>
 </html>
