--- a/app/views/partials/mote_row.handlebars
+++ b/app/views/partials/mote_row.handlebars
@@ -1,11 +1,9 @@
-<tr>
-	<td class="vote-cell">
-	    <a href="#" class="agree">^</a>
-	</td>
-	<td class="moment"><textarea>{{body}}</textarea></td>
-	<td class="type-cell">
-	    <a class="type type-action" data-type="action" href="#">A</a>
-	    <a class="type type-decision" data-type="decision" href="#">D</a>
-	    <a class="type type-info" data-type="info" href="#">I</a>
-	</td>
-</tr>
+<td class="vote-cell">
+    <a href="#" data-agree="{{consensus}}" class="{{youAgree agree}}">^</a>
+</td>
+<td class="moment"><textarea>{{body}}</textarea></td>
+<td class="type-cell">
+    <a class="type {{type type "action"}}" data-type="action" href="#">A</a>
+    <a class="type {{type type "decision"}}" data-type="decision" href="#">D</a>
+    <a class="type {{type type "info"}}" data-type="info" href="#">I</a>
+</td>
