Cleaning up css

--- a/app/views/host.handlebars
+++ b/app/views/host.handlebars
@@ -16,6 +16,6 @@
 <div id="actions-container">
     <div id="meeting-actions">
         <a id="share-meeting" href="#" class="btn">Share</a>
-        <a id="publish-meeting" href="#" class="btn">Publish</a>
+        {{! <a id="publish-meeting" href="#" class="btn">Publish</a> }}
     </div>
 </div>
