--- a/app/views/partials/host.handlebars
+++ b/app/views/partials/host.handlebars
@@ -1,8 +1,8 @@
 <label>host</label>
 {{#if isHost}}
     <input type="text" id="meeting-host" placeholder="Darth Vader <dvader@gmail.com>" value=""> 
-    <span class="is-host">You're The Host</span>
+    <span class="is-host">You're Hosting this Party Captain</span>
 {{else}}
     <span id="meeting-host"></span>
-    <span class="is-host">You're A Guest</span>
+    <span class="is-guest">Guesting it Up</span>
 {{/if}}
