--- a/app/views/partials/mote_row.handlebars
+++ b/app/views/partials/mote_row.handlebars
@@ -6,7 +6,7 @@
 </td>
 <td class="moment"><textarea>{{body}}</textarea></td>
 <td class="type-cell">
-    <a class="type {{type type "action"}}" data-type="action" href="#">A</a>
-    <a class="type {{type type "decision"}}" data-type="decision" href="#">D</a>
-    <a class="type {{type type "info"}}" data-type="info" href="#">I</a>
+    <a class="type {{type type "action"}}" title="Action" data-type="action" href="#">A</a>
+    <a class="type {{type type "decision"}}" title="Decision" data-type="decision" href="#">D</a>
+    <a class="type {{type type "info"}}" title="Info" data-type="info" href="#">I</a>
 </td>
