--- a/public/css/meeting.css
+++ b/public/css/meeting.css
@@ -25,6 +25,36 @@ input {
     outline: none;
 }
 
+#ajax-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50000;
+    background: #000 url(../img/ajax-loader.gif) no-repeat center center;
+    opacity: 0.8;
+}
+
+#ajax-loading .quotes {
+    width: 100%;
+    padding: 30px 0 0;
+    margin: 0 auto;
+    text-align: center;
+    color: #fff;
+    list-style: none
+}
+
+#ajax-loading .quotes li {
+    display: none;
+}
+
+#ajax-loading .quotes li.active {
+    display: inline;
+}
+
 #logo {
     float: right;
     background: url(../img/logo.png) no-repeat center center;
